adding images and sources to generate graphs in report

--- a/Documentation/ReleaseNotes/Vecto_3.0.1.312/Comparison.tex
+++ b/Documentation/ReleaseNotes/Vecto_3.0.1.312/Comparison.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../ReleaseReport.tex
 
 %=========================================================================
-\section{Comparison of Vecto 2.2 and Vecto 3.0.1} % (fold)
+\section{Comparing Vecto 2.2 and Vecto 3.0.1} % (fold)
 \label{sec:comparison_of_vecto_2_2_and_vecto_3_0_1}
 %=========================================================================
 
@@ -330,7 +330,7 @@ Req 904 & The simulation tool shall be able to handle concurrent usage so that s
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Comparison Vecto 2.2 and Vecto 3.0.1 on the Basic Driving Cycles} % (fold)
+\section{Comparing Vecto 2.2 and Vecto 3.0.1 on the Basic Driving Cycles} % (fold)
 \label{sec:comparison_vecto_2_2_and_vecto_3_0_1_on_the_basic_driving_cycles}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -353,7 +353,7 @@ Req 904 & The simulation tool shall be able to handle concurrent usage so that s
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Comparison of Vecto 2.2 and Vecto 3.0.1 on the Declaration Cycle} % (fold)
+\section{Comparing Vecto 2.2 and Vecto 3.0.1 on Selected Declaration Cycle} % (fold)
 \label{sec:comparison_of_vecto_2_2_and_vecto_3_0_1_on_the_declaration_cycle}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
