--- a/Documentation/ReleaseNotes/preamble_handout.tex
+++ b/Documentation/ReleaseNotes/preamble_handout.tex
@@ -45,6 +45,12 @@
 \newcommand{\Vcheck}{\ding{52}}
 \newcommand{\Vtodo}{ToDo}
 
+\graphicspath{ %
+	{beamer_theme/} %
+	 {img/} %
+	 {Vecto_3.0.1.312/} %
+}
+
 % \input{lecture_builder.tex}
 
 % \input{header.tex}
